--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,33 @@ height: 10px;
 border-radius: 50%;
 opacity: .3;
 }
+.time
+{
+font-weight: bold;
+font-size: 150%;
+}
+.date
+{
+font-weight: bold;
+font-size: 150%;   
+}
+.footer-menu
+{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content:space-evenly;   
+    align-items: center;
+
+
+}
+.menu-icon
+{
+  width: 35px;
+  height: 35px;
+  margin-right: .8rem;
+  margin-left: .8rem;
+}
 .menu-toggle
 {
 width: 100%;
@@ -177,30 +204,30 @@ color: black;
 /* resume section */
 .resume
 {
-    display: none;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    color: white;
-    opacity: .8;
+display: none;
+flex-direction: column;
+width: 100%;
+height: 100%;
+background-color: black;
+color: white;
+opacity: .8;
 }
 .r-top
 {
-    display: flex;
-    flex-direction: row;
-    color: white;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 1rem;
+display: flex;
+flex-direction: row;
+color: white;
+align-items: center;
+justify-content: space-evenly;
+padding: 1rem;
 }
 .r-img
 {
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    background-color: #FF4155;
- 
+border-radius: 50%;
+width: 40px;
+height: 40px;
+background-color: #FF4155;
+
 }
 .r-line
 {
@@ -209,31 +236,31 @@ align-self: flex-end;
 }
 .r-content
 {
-    text-align: right;
-    padding: 1rem;
-    line-height: 1.5rem;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+text-align: right;
+padding: 1rem;
+line-height: 1.5rem;
+color: white;
+display: flex;
+flex-direction: column;
+align-items: flex-end;
 }
 .r-content-row
 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: .5rem;
+display: flex;
+flex-direction: row;
+align-items: center;
+margin: .5rem;
 }
 .r-link
 {
-    color: white;
-    text-decoration: none;
-    
+color: white;
+text-decoration: none;
+
 }
 .r-list
 {
-   
-    list-style-type: none;
+
+list-style-type: none;
 }
 
 /* Project section */
@@ -241,28 +268,47 @@ align-self: flex-end;
 display: none;
 flex-direction: column;
 align-items: center;
-
+justify-content:flex-start;
 background-color: black;
 opacity: .8;
 width: 100%;
 height: 100%;
 }
+.project-list
+{
+text-align: center;
+display: flex;
+flex-direction: column ;
+justify-content: center;
+align-items: center;
+width: 100%;
+margin-top: 3rem;
+}
 .projects-link
 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: white;
-    justify-content: space-around;
-    color: black;
-    width: 80%;
-    margin: auto;
-    border-radius: 10px;
-    padding: .6rem;
-    text-align: left;
-    margin-top: .3rem;
+display: flex;
+flex-direction: row;
+align-items: center;
+background-color: white;
+justify-content: flex-start;
+color: black;
+width: 80%;
+margin-top: 3rem;
+border-radius: 10px;
+padding: .6rem;
+text-align: left;
+
 }
+
+.pro-title
+{
+font-family: 'Kavivanar', cursive;
+font-weight: bolder;
+font-size: 102%;
+padding-left: 1rem;
+}
+
 .pro-icon{
-    width: 35px;
-    height: 35px;
+width: 35px;
+height: 35px;
 }
