--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: space-between;
-background: url("../images/wallpaper.jpg");
+background: url("../images/karan.jpg");
 background-repeat: no-repeat;
 background-size: cover;
 border-left:rgb(94, 92, 92)2px solid;
@@ -114,6 +114,14 @@ z-index: 5;
 .menu
 {
 align-self: baseline;
+}
+#back
+{
+  font-size: 130%;
+}
+#menu-home
+{
+  font-size: 130%;
 }
 .content
 {
